--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.3'
+    id 'org.springframework.boot' version '3.1.3' // Spring Boot 호환성 확인
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(17) // Java 17 사용
     }
 }
 
@@ -24,23 +24,43 @@ repositories {
 }
 
 dependencies {
+    // Spring Boot 기본 의존성
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
-    runtimeOnly 'com.mysql:mysql-connector-j'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // bcrypt
+    // Spring Security 기본 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // QueryDSL: 타입 세이프 SQL 쿼리를 지원하는 JPA 확장 라이브러리
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+
+    // Lombok: 코드 간소화를 위한 라이브러리
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // Jakarta Persistence API 어노테이션 처리기 (QueryDSL과 함께 사용)
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+
+    // javax.annotation-api 추가 (QueryDSL 관련 경고 해결)
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+    // 데이터베이스 드라이버
+    runtimeOnly 'com.h2database:h2' // 테스트용 H2 DB
+    runtimeOnly 'com.mysql:mysql-connector-j' // MySQL 연결 드라이버
+
+    // bcrypt 라이브러리 (비밀번호 암호화)
     implementation 'at.favre.lib:bcrypt:0.10.2'
 
-    // jwt
-    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
-    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
-    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+    // JWT 관련 라이브러리
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // 테스트 관련 라이브러리
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
